[package]
authors = ["ilkosta <costantino.giuliodori@gmail.com>"]
description = "a simple REST webservice to convert .odt in .pdf by executing libreoffice"
license-file = "LICENSE"
name = "odt2pdf"
readme = "Readme.md"
repository = "https://github.com/ilkosta/odt2pdf"
version = "0.0.1"

[dependencies]
docopt = "*"
fern = "0.3.*"
formdata = "*"
iron = "*"
log = "0.3.*"
mount = "*"
router = "*"
rust-crypto = "*"
rustc-serialize = "*"
staticfile = "*"
time = "*"

#[dependencies.clippy]
#git = "https://github.com/Manishearth/rust-clippy"

[dependencies.params]
git = "https://github.com/iron/params.git"
